@@ -1,3 +1,13 @@
+2012-08-06  Mikhail Pozdnyakov  <mikhail.pozdnyakov@intel.com>
+
+        [EFL] EFL's LayoutTestController needs removeAllVisitedLinks implementation
+        https://bugs.webkit.org/show_bug.cgi?id=82724
+
+        Reviewed by Csaba Osztrogonác.
+
+        * DumpRenderTree/efl/LayoutTestControllerEfl.cpp:
+        (LayoutTestController::removeAllVisitedLinks):
+
 2012-08-06  Mario Sanchez Prada  <msanchez@igalia.com>
 
         [WK2][GTK] Implement a new spell checker API for WebKit2GTK+
